<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Bg_Item_Rs">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="1:1.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        android:elevation="0dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/thumbnail"
        app:layout_constraintEnd_toEndOf="@+id/thumbnail"
        app:layout_constraintStart_toStartOf="@+id/thumbnail"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:id="@+id/icPlay"
            android:background="@color/bg_view_fast_options"
            android:layout_height="40dp"
            android:src="@drawable/icon_play" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:id="@+id/mLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thumbnail">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRenam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="5"
            android:backgroundTint="#2A004CDF"
            android:text="@string/rename"
            android:textAllCaps="false"
            android:textColor="@color/maintream"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCompare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"

            android:layout_marginTop="5dp"
            android:layout_weight="5"
            android:backgroundTint="@color/maintream"
            android:text="@string/compare"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="0dp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/thumbnail"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="middle"
            android:lines="1"
            android:text="Tên video "
             android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="middle"
                android:lines="1"
                android:text="@string/compressed"
                 android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sizeAfter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.8MB"
                android:textColor="@color/maintream"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/appCompatTextView4" />

            <com.jaygoo.widget.RangeSeekBar
                android:id="@+id/seekCompress"
                android:layout_width="0dp"
                android:layout_height="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4"
                app:rsb_gravity="center"
                app:rsb_mode="single"
                app:rsb_progress_color="@color/maintream"
                app:rsb_progress_default_color="@color/gray"
                app:rsb_progress_height="4dp"
                app:rsb_thumb_width="0dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resolutionAfter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekCompress" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="middle"
                android:lines="1"
                android:text="@string/original"
                 android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sizeBefore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.8MB"
                android:textColor="@color/maintream"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/appCompatTextView7" />

            <com.jaygoo.widget.RangeSeekBar
                android:id="@+id/seekOriginal"
                android:layout_width="0dp"
                android:layout_height="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView7"
                app:rsb_gravity="center"
                app:rsb_mode="single"
                app:rsb_progress_color="@color/maintream"
                app:rsb_progress_default_color="@color/gray"
                app:rsb_progress_height="4dp"
                app:rsb_thumb_width="0dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resolutionBefore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekOriginal" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>